# emerson-violin-pwa

./: .gitignore  .jscpd.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.txt  README.md  Trunk.toml  app.js  eslint.config.js  fallback-session.js  find_dead_css.js  index.html  index.old.html  knip.json  manifest.webmanifest  package-lock.json  package.json  playwright.config.js  playwright.live.config.js  start-preview.sh  styles.css  sw-assets.js  sw.js  test-ml-hang.js  test-mount.mjs  tsconfig.json  unused_css.txt  vite.config.js  vitest.config.js  wasm-init.js
.claude/agents/: web-audio-specialist.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: maintainer-checklist.md
.github/workflows/: ci.yml  pages.yml  production-smoke.yml  quality.yml
_archived/original-assets/: README.md
_archived/plans/: README.md
analysis/: dead-code-pass-20260310.md
docs/: ARCHIVE_POLICY.md  AUDIT_OFFLINE_PWA_IPADOS_SAFARI.md  DOCS_CONVENTIONS.md  HANDOFF.md  MIGRATION_CHECKLIST_IPADOS_SAFARI.md  README.md  RISK_REGISTER_IPADOS_SAFARI.md  STATUS_HANDOFF_IPADOS_SAFARI.md  TRANSITION_PLAN_RUST_FIRST_IPADOS_SAFARI.md  ViolinPLANV2.md  api-native-tools-audit.md  chromium-only-files.md  css-dead-code-analysis.md  feature-inventory.md  modernization-plan.md  rebuild-roadmap.md  release-checklist.md  safari-26.2-compatibility-audit.md  safari-ipad-optimizations-summary.md  stack-architecture.md  ui-ux-polish-summary.md  xcode-simulator-testing.md
docs/adr/: 0003-audio-worklet-wasm.md  0005-lesson-packs-cache.md  0006-sw-update-strategy.md  0007-audio-engine-stability.md  0009-build-budgets.md  0011-storage-integrity-checks.md  README.md
docs/ai/: API_DOC_SUMMARY.md  CLAUDE_COMPRESSION_SCHEDULE_SUMMARY.md  CLAUDE_OPTIMIZATION_SUMMARY.md  FAST_PATH.md  FEATURE_INVENTORY_SUMMARY.md  FILE_MAP.md  IGNORE.md  INDEX_SUMMARY.md  LEGACY_STRATEGY_SUMMARY.md  NATIVE_IOS_SUMMARY.md  PROJECT_CONTEXT.md  QA_REPORTS_SUMMARY.md  README.md  REBUILD_ARCHITECTURE_SUMMARY.md  REBUILD_UX_SUMMARY.md  RUST_MODULE_SUMMARY.md  STYLES_SUMMARY.md  SW_SUMMARY.md
docs/architecture/: audio-and-realtime.md  feature-surface.md  next-reboot-target-state.md  offline-and-persistence.md  reboot-feature-matrix.md  system-overview.md
docs/assets/: README.md
docs/guides/: asset-optimization.md  safari-ipad-test-guide.md  xcode-simulator-testing.md
docs/plans/: 2025-02-16-safari-ipadOS-polish.md  2026-02-05-migration-cta-design.md  2026-02-15-app-wide-extraction-design.md  2026-02-15-code-splitting-design.md  2026-02-15-extract-and-test-design.md  2026-02-15-extract-and-test-plan.md  2026-02-15-full-debug-polish-design.md  2026-02-15-storage-extraction-design.md  2026-02-15-storage-extraction-plan.md  2026-02-15-storage-phase2-design.md  2026-02-15-storage-phase2-plan.md  2026-02-15-test-and-perf-design.md  2026-02-16-asset-optimization-design.md  2026-02-16-image-optimization.md  (+51 more)
imagen/: README.md
public/: _headers  db-worker.js  manifest.json  manifest.webmanifest  offline.html  pdf.js  pose.js  pwa-manifest.json  sw-assets.js  sw.js
qa/: ipados-26_2-issue-log.md  test-plan-ipados26.md
rust/: assignments.rs  audio_worklet.rs  backup.rs  capabilities.rs  config.rs  controls.rs  db_client.rs  db_messages.rs  db_migration.rs  db_schema.rs  db_worker.rs  diagnostics.rs  docs.rs  dom.rs  encryption.rs  error_queue.rs  errors.rs  exports.rs  file_access.rs  flow.rs  game_map.rs  game_scores.rs  games.rs  imports.rs  lib.rs  metronome.rs  ml.rs  ml_api.rs  ml_calibration.rs  ml_capture.rs  ml_infer.rs  ml_models.rs  ml_traces.rs  opfs_test.rs  pdf_render.rs  perf.rs  platform.rs  pose_capture.rs  profiles.rs  pwa.rs  (+20 more)
scripts/: README.md  analyze-dead-css-results.js  analyze-unused-functions.js  apply-performance-recommendation.mjs  assert-critical-coverage.mjs  assert-runtime-versions.mjs  audit-accessibility.mjs  audit-dependency-duplicates.mjs  audit-docs.mjs  audit-feature-modules.mjs  audit-feature-parity.mjs  audit-learning-completeness.mjs  audit-performance-budget-config.mjs  audit-performance-budgets.mjs  audit-release-test-gates.mjs  audit-secrets.mjs  audit-view-sync.mjs  build-games-html.js  build-songs-html.js  build-spa-fallback.mjs  build-sw-assets.js  cleanup-organization.sh  extract-views.js  find-dead-css-vars.js  find-dead-css-vars.mjs  find-dead-css.js  find-ghost-ids.js  find-js-duplicates.js  find-orphaned-css-vars.js  find-orphaned-files.js  find-orphaned-global-css.js  find-orphaned-svgs.js  find-unused-imports.js  generate-gavotte.py  generate-lightly.py  generate-mary.py  generate-maysong.py  generate-minuet.py  generate-missing-songs.mjs  generate-ocome.py  (+16 more)
src/: AppShell.jsx  app.js  app.jsx  routes.jsx
tests/: README.md  analysis-recordings-utils.test.js  app-utils.test.js  audio-player.test.js  audio-utils.test.js  contrast.tokens.test.js  difficulty.test.js  dismiss-helpers.test.js  dom-ready.test.js  export-ui.spec.js  export-ui.test.js  feature-flags.test.js  focus-timer-utils.test.js  format-detection.test.js  game-utils.test.js  ipados-capabilities.test.js  lesson-plan-utils.test.js  lifecycle-utils.test.js  mastery-utils.test.js  math.test.js  media-query-listener.test.js  offline-mode.test.js  platform-utils.test.js  progress-utils.test.js  recommendations-utils.test.js  recommendations.test.js  recordings-storage.test.js  recordings-utils.test.js  rhythm-dash-utils.test.js  session-review-utils.test.js  session-timer.test.js  skill-profile.test.js  sound-state.test.js  storage-utils.test.js  sw-support.test.js  sw-updates.test.js  tone-player.test.js  trainer-utils.test.js  tuner-utils.test.js
views/: about.html  analysis.html  backup.html  bowing.html  coach.html  parent.html  progress.html  settings.html  tuner.html
wasm/: Cargo.toml
wasm-src/: README.md
wasm-src/panda-audio/: Cargo.toml
wasm-src/panda-audio/src/: lib.rs
wasm-src/panda-core/: Cargo.toml
wasm-src/panda-core/src/: lib.rs
wasm/panda-audio/: Cargo.toml
wasm/panda-audio/src/: lib.rs
wasm/panda-core/: Cargo.toml
wasm/panda-core/src/: achievements.rs  lib.rs  skills.rs  xp.rs
(+919 files in other folders)
