[package]
name = "emerson-violin-pwa"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "rust/lib.rs"

[[bin]]
name = "emerson-violin-pwa"
path = "rust/main.rs"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
wasm-bindgen-rayon = { version = "1.2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
futures-channel = "0.3"
pulldown-cmark = "0.12"
tract-onnx = { version = "0.21", default-features = false, optional = true }
ndarray = { version = "0.15", optional = true }
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlDialogElement",
  "HtmlTextAreaElement",
  "HtmlButtonElement",
  "HtmlSelectElement",
  "HtmlOptionElement",
  "HtmlOptionsCollection",
  "HtmlCollection",
  "HtmlVideoElement",
  "HtmlMediaElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Node",
  "NodeList",
  "DomTokenList",
  "DomStringList",
  "DomStringMap",
  "DomParser",
  "SupportedType",
  "CssStyleDeclaration",
  "Event",
  "EventTarget",
  "PointerEvent",
  "MouseEvent",
  "DomRect",
  "KeyboardEvent",
  "Storage",
  "StorageManager",
  "Navigator",
  "Location",
  "MediaQueryList",
  "Clipboard",
  "ClipboardEvent",
  "Headers",
  "Request",
  "RequestInit",
  "Response",
  "MediaDevices",
  "MediaStream",
  "MediaStreamTrack",
  "MediaStreamConstraints",
  "MediaStreamAudioSourceNode",
  "AudioContext",
  "AudioDestinationNode",
  "OscillatorNode",
  "GainNode",
  "AnalyserNode",
  "AudioNode",
  "AudioParam",
  "Blob",
  "BlobPropertyBag",
  "File",
  "FileList",
  "FileReader",
  "DomParser",
  "CustomEvent",
  "CustomEventInit",
  "BlobEvent",
  "ErrorEvent",
  "MediaRecorder",
  "MediaRecorderOptions",
  "PromiseRejectionEvent",
  "Notification",
  "NotificationPermission",
  "PushManager",
  "PushSubscription",
  "PushSubscriptionOptionsInit",
  "Crypto",
  "SubtleCrypto",
  "Url",
  "Performance",
  "PerformanceObserver",
  "PerformanceObserverEntryList",
  "MessageEvent",
  "Worker",
  "WorkerOptions",
  "WorkerType",
  "ServiceWorkerContainer",
  "ServiceWorkerRegistration",
  "ServiceWorker",
  "IdbFactory",
  "IdbDatabase",
  "IdbOpenDbRequest",
  "IdbRequest",
  "IdbCursor",
  "IdbCursorWithValue",
  "IdbKeyRange",
  "IdbTransaction",
  "IdbObjectStore",
  "IdbObjectStoreParameters",
  "IdbTransactionMode",
  "IdbRequestReadyState",
] }

[features]
default = []
ml-onnx = ["tract-onnx", "ndarray"]
wasm-threads = ["wasm-bindgen-rayon"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
