[package]
name = "panda-audio"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "console",
    "AudioContext",
    "AnalyserNode",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "GainNode",
    "OscillatorNode",
    "BaseAudioContext",
] }
console_error_panic_hook = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
